--- a/build.gradle
+++ b/build.gradle
@@ -11,13 +11,27 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-
+	maven {
+        name = "Ladysnake Mods"
+        url = 'https://ladysnake.jfrog.io/artifactory/mods'
+    }
+	maven {
+		name = "TerraformersMC"
+		url = "https://maven.terraformersmc.com/"
+	}
+	maven {
+        url = "https://www.cursemaven.com"
+    }
 }
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	modCompileOnly "net.fabricmc.fabric-api:fabric-api:0.40.1+1.17"
+	modCompileOnly "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:3.1.1"
+	modCompileOnly "dev.emi:trinkets:3.0.4"
+	modCompileOnly "curse.maven:cosmetic-armor-fabric-436659:3419941"
 }
 
 processResources {
