--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.39
-	loader_version=0.11.6
+	# check these on https://fabricmc.net/develop
+	minecraft_version=1.18.1
+	yarn_mappings=1.18.1+build.22
+	loader_version=0.12.12
 
 # Mod Properties
-	mod_version = 0.0.1
+	mod_version = 0.1.0
 	maven_group = com.github.clevernucleus
 	archives_base_name = armor-model-predicate
+
+# Dependencies
+	
