--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,11 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.18.1
-	yarn_mappings=1.18.1+build.22
-	loader_version=0.12.12
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.3
+loader_version=0.14.6
 
-# Mod Properties
-	mod_version = 0.1.0
-	maven_group = com.github.clevernucleus
-	archives_base_name = armor-model-predicate
+mod_version = 0.1.1
+maven_group = com.github.clevernucleus
+archives_base_name = armorrenderlib
 
-# Dependencies
-	
+fabric_version=0.55.1+1.18.2
