--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
+import com.modrinth.minotaur.dependencies.ModDependency
+
 plugins {
 	id 'fabric-loom' version '0.12-SNAPSHOT'
 	id 'maven-publish'
+	id "com.modrinth.minotaur" version "2.+"
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -53,4 +56,18 @@ publishing {
 	repositories {
         
 	}
+}
+
+modrinth {
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    System.out.println("Enter a Modrinth token: ");
+    token = br.readLine();
+    projectId = "rdrxR9PW"
+    versionNumber = "${project.mod_version}"
+    versionName = "${project.mod_version}"
+	versionType = "beta"
+    uploadFile = remapJar
+    gameVersions = ["${project.minecraft_version}"]
+    loaders = ["fabric"]
+    dependencies = [new ModDependency("P7dR8mSH", "required")]
 }
