Fixes and versioning
*HOPEFULLY we fixed the compat issue with Geckolib. I only know it exists because may player's have provided error logs that show as much, however I still cannot replicate the crash for testing purposes. So while I THINK this fixes it, I cannot actually verify this.
+Incremented version
*Now uses VersionDependency instead of ModDependency

--- a/build.gradle
+++ b/build.gradle
@@ -69,5 +69,5 @@ modrinth {
     uploadFile = remapJar
     gameVersions = ["${project.minecraft_version}"]
     loaders = ["fabric"]
-    dependencies = [new VersionDependency("3KmOcp6b", "required")]
+    dependencies = [new VersionDependency("EsaWeELS", "required")]
 }
